# LearnOpenGL

./: CMakeLists.txt  Makefile  imgui.ini
.cache/clangd/index/: Camera.cpp.33478F0AEEECD983.idx  Camera.h.F6B8D9A633DE4549.idx  Mesh.cpp.16C65F2DC785966E.idx  Mesh.h.AE66568B73670FCB.idx  Model.cpp.47E6E010893A6229.idx  Model.h.319590CC081E05AA.idx  Shader.cpp.818545755B5F44D3.idx  Shader.h.FB7D398FB765ED22.idx  SimpleGui.cpp.BD76A2BD3A8784ED.idx  SimpleGui.h.394E41F2745F5640.idx  _fixes.hpp.E9C02B72D09603D6.idx  _vectorize.hpp.F5F031A867B21EEB.idx  common.hpp.3CBA946BEFFF19A2.idx  compute_common.hpp.AB9E77CDB65EF8E9.idx  compute_vector_relational.hpp.821A21814AC129F1.idx  constants.hpp.BA6798051EF801E9.idx  constants.inl.AA1CE07E3FE95A3A.idx  epsilon.hpp.77B3FC94AEFB0588.idx  epsilon.inl.C16AA5B9BC2C80A1.idx  exponential.hpp.EA0405448321C23C.idx  flecs.c.D04B98D76081800C.idx  flecs.h.0990B7E85182D5A5.idx  func_common.inl.75457EBDFDD75034.idx  func_exponential.inl.F6B4D031C043EE4F.idx  func_geometric.inl.6F0EFDF24BECEB88.idx  func_integer.inl.F457FEA49F678526.idx  func_matrix.inl.7D05F3297BA408FD.idx  func_packing.inl.2226E267B4B578A5.idx  func_trigonometric.inl.BEFC22D920B382DE.idx  func_vector_relational.inl.A126F4405CBF2D33.idx  (+187 more)
include/: Camera.h  Mesh.h  Model.h  Shader.h  SimpleGui.h
lib/glad/src/: glad.c
models/chess/: chess.mtl
resources/shaders/: big_lighting.frag  plane.vert
shaders/: light_cube.frag  light_cube.vert  lighting.frag  lighting.vert  plane.frag
src/: Camera.cpp  Mesh.cpp  Model.cpp  Shader.cpp  SimpleGui.cpp  gljam.cpp  hello_triangle.cpp
(+2 files in other folders)
